--- a/app/templates/products/components/_form.html
+++ b/app/templates/products/components/_form.html
@@ -1,15 +1,26 @@
+{% from 'macros/_error_list.html' import errors_list %}
+
 <form 
     id="create-product"
     hx-post="{{ url_for('products.create_product') }}"
     hx-swap="outerHTML"
+    novalidate
     >
-    <p><label for="name">Имя: </label><input type="text" name="name" id="product-name" required></p>
-    <p><label for="price">Цена: </label><input type="text" name="price" id="product-price" min="1" max="9999999" required></p>
-    {% if error %}
-        <div style="color: red;">
-            {{ error }}
-        </div>
-    {% endif %}
+
+    {{ form.hidden_tag() }}
+    <div>
+        {{ form.name.label }} {{ form.name  }}
+        {% if form.name.errors %}
+            {{ errors_list(form.name.errors)}}
+        {% endif %}
+    </div>
+    <div>
+        {{ form.price.label }} {{ form.price }}
+        {% if form.price.errors %}
+            {{ errors_list(form.price.errors)}}
+        {% endif %}
+    </div>
+    {{ form.submit}}
 
     <button type="submit">Add</button>
 </form>
